samples/_failures_safe/1761176437_2fa636_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61e57b2d.c: In function ‘main’:
./samples/SAFE/__tmp_61e57b2d.c:140:30: error: missing terminating " character
  140 |     add_log_entry(&analyzer, "2024-01-15
      |                              ^~~~~~~~~~~
./samples/SAFE/__tmp_61e57b2d.c:140:5: error: expected expression at end of input
  140 |     add_log_entry(&analyzer, "2024-01-15
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_61e57b2d.c:140:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_61e57b2d.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_61e57b2d.c:140:5: error: expected declaration or statement at end of input
  140 |     add_log_entry(&analyzer, "2024-01-15
      |     ^~~~~~~~~~~~~
